# myfair

./: .gitignore  Myfair.md  config.py  dis_gen.py  lm_est.py  main.py  myfair_model.py  pyproject.toml  readme.md  requirements.txt
.obsidian/: workspace.json
